app/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;


:root {
  --background: #1f1f1f;
  --foreground: #fff;
}

@media (prefers-color-scheme: dark) {
  :root {
    --background: #1f1f1f;
    --foreground: ;
  }
}

body {
  color: var(--foreground);
  background-color: var(--background);
  font-family: Syne;
  max-width: 1440px;
  
}

section {
    padding:100px 50px;
    color:;
}

h1, h2, h3, h4, h5 {font-family: Syne;}
p {
    font-family: Syne;
    font-size: 22px;
}

canvas {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    touch-action: none;
}
  
tr {border-bottom:1px solid #999; border-left:1px solid #999}
th, td {border-right:1px solid #999; padding: 0 20px;}

a:hover .rh45 {transform:rotate(45deg); transition: 0.1s ease-out;}
.card:hover .rh45 {transform:rotate(45deg); transition: 0.1s ease-out;}
.card:hover img {transform:scale(1.02); transition: 0.3s ease-out;}
.imgF:hover button {transform:rotate(360deg); transition: 0.3s ease-out;}
a:hover .tooltip {display:block}

@media screen and (min-width: 1700px) {
    body { margin:auto }
    .menu {display: block; text-align:center;}
    .menuitems {}
}

@media screen and (max-width: 1300px) {
    section {
        padding: 70px 30px;
    }
    p {
        font-size: 18px;
    }
}

@media screen and (max-width: 700px) {
    section {
        padding: 50px 20px;
    }
    th, td {padding: 0;}
} 

